# Snapback

./: .coveragerc  .gitignore  CLAUDE.md  CMakeLists.txt  PROGRESS.md  README.md  doc.md  docker-compose.demo.yml  docker-compose.yml  generate_log.py  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  ci.yml  e2e.yml  production-smoke.yml  release.yml
backend/: Dockerfile  pom.xml
benchmarks/: bench_hotpaths.cpp  bench_snapback.cpp  bench_util.hpp
core/: CMakeLists.txt  README.md  event_processor.cpp  event_processor.h  hooks_test.cpp  mmap_logger.cpp  mmap_logger.h  mmap_logger_test.cpp  neurofocus_engine.cpp  processor_test.cpp  windows_hooks.cpp  windows_hooks.h  zmq_publisher.cpp  zmq_publisher.h  zmq_publisher_test.cpp
core/experimental/: context.h  context_demo.cpp  context_tracker.h  overlay.h  title_parser.h
data/: benchmark_quality.json  metrics.json  model.json  model.onnx  model_test.onnx
docs/: ARCHITECTURE.md  BACKLOG.md  BACKLOG_PLATFORM.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  BUILD_PLAN.md  CODE_HEALTH_REVIEW.md  CONCEPTS.md  CONTEXT_RECOVERY_DESIGN.md  DEPLOYMENT.md  METRICS.md  PACKAGING.md  PORT_HISTORY.md  README.md  ROADMAP.md  SCHEMAS.md  SMOKE_TEST.md  TECHNICAL_DESIGN_DOCUMENT.md  TEST_BACKLOG.md  TODO.md  TRAINING_GUIDE.md  benchmarking.md  metrics.json  system_architecture.md  testing_strategy.md  windows_demo.md
docs/archive/: PROGRESS_full.md
e2e/: .mocharc.json  README.md  package-lock.json  package.json  session.spec.mjs
fixtures/: ipc_commands.json  model.onnx
fixtures/feature_parity/: classifier_scenarios.json  scenarios.json
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/coverage/: ActionErrorBanner.tsx.html  ActivityCards.tsx.html  App.tsx.html  AppHeader.tsx.html  InsightsCard.tsx.html  LiveStatusCards.tsx.html  PermissionWizard.tsx.html  PermissionsCard.tsx.html  RulesCard.tsx.html  SessionControlCard.tsx.html  SessionReviewCards.tsx.html  TrainingDeployCard.tsx.html  api.ts.html  apiMappers.ts.html  appRulePreview.ts.html  healthHints.ts.html  healthPoll.ts.html  index.html  insightsMetrics.ts.html  permissionWizardState.ts.html  timelineRefresh.ts.html  trainingHints.ts.html  useAppEffects.ts.html  useAppRules.ts.html  useFeedback.ts.html  useHealth.ts.html  useInsights.ts.html  useLiveData.ts.html  useSession.ts.html  useTrainingDeploy.ts.html  utils.ts.html
frontend/public/: snapback.html
frontend/src/: ActionErrorBanner.tsx  ActivityCards.tsx  AnalyticsCard.tsx  App.tsx  AppHeader.tsx  DiagnosticsCard.tsx  FocusSummaryCard.tsx  GoalCategoriesCard.tsx  InsightsCard.tsx  LiveStatusCards.tsx  PermissionWizard.tsx  PermissionsCard.tsx  PomodoroCard.tsx  PrivacyCard.tsx  RulesCard.tsx  SessionControlCard.tsx  SessionReviewCards.tsx  SettingsCard.tsx  SummaryCard.tsx  TrainingDeployCard.tsx  api.ts  apiMappers.ts  appRulePreview.ts  healthHints.ts  healthPoll.ts  insightsMetrics.ts  main.tsx  permissionWizardState.ts  styles.css  timelineRefresh.ts  trainingHints.ts  useAnalytics.ts  useAppEffects.ts  useAppRules.ts  useAutostart.ts  useDiagnostics.ts  useFeedback.ts  useFocusSummary.ts  useGoalCategories.ts  useHealth.ts  (+8 more)
frontend/tests/: App.test.tsx  apiMappers.test.ts  appRulePreview.test.ts  appRulesFlow.test.tsx  autostartFlow.test.tsx  errorRecovery.test.tsx  healthDegradation.test.tsx  healthHints.test.ts  healthPoll.test.ts  insightsFlow.test.tsx  insightsMetrics.test.ts  permissionRequestFlow.test.tsx  permissionWizardState.test.ts  pomodoroFlow.test.tsx  privacyFlow.test.tsx  sessionFlow.test.tsx  setup.ts  snapbackDismiss.test.tsx  timelineRefresh.test.ts  trainingDeploy.test.tsx  trainingHints.test.ts  utils.test.ts
ml/: Dockerfile  __init__.py  analyze_model.py  classifier_quality.py  dataset_builder.py  event_log_reader.py  event_replay.py  event_schema.py  export_onnx.py  feature_parity_cli.py  features.py  inference_server.py  labeling.py  metrics_report.py  parity.py  pipeline_cli.py  requirements-train.txt  requirements.txt  sqlite_export.py  train_cli.py  training_pipeline.py  zmq_subscriber.py
ml/tests/: __init__.py  test_benchmark_classifier_quality.py  test_dataset_builder.py  test_event_log_reader.py  test_event_replay.py  test_export_onnx.py  test_feature_export.py  test_feature_parity.py  (+12 more)
scripts/: gui_smoke_windows.ps1  install_windows_package.ps1  package_windows.ps1  run_benchmarks.ps1  run_feature_parity_dual.py  test_local.ps1  validate_windows_package.ps1  windows_demo.ps1
src/: main.cpp  result.hpp  types.cpp  types.hpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bench.rs  commands.rs  events.rs  label_shortcuts.rs  lib.rs  main.rs  smoke.rs  state.rs  training_deploy.rs  tray.rs  types.rs
src-tauri/src/capture/: active_window.rs  mod.rs  permissions.rs  thread.rs
src-tauri/src/engine/: app_context.rs  classifier.rs  classifier_eval.rs  features.rs  focus_modes.rs  goal_alignment.rs  mod.rs  onnx_model.rs  parity.rs
src-tauri/src/snapback/: mod.rs  overlay.rs  title_parser.rs  tracker.rs
src-tauri/src/storage/: mod.rs
tests/: doctest_wrapper.hpp  test_app_state.cpp  test_autostart.cpp  test_capture_thread.cpp  test_command_bridge.cpp  test_confidence.cpp  test_engine.cpp  test_feature_parity.cpp  test_focus_summary.cpp  test_frontend_assets.cpp  test_idle_detector.cpp  test_ipc_contract.cpp  test_logger.cpp  test_notification.cpp  test_onnx.cpp  test_overlay.cpp  test_permissions.cpp  test_pomodoro.cpp  test_ring_buffer.cpp  test_storage.cpp  test_time.cpp  test_title_parser.cpp  test_tracker.cpp  test_training_deploy.cpp  test_tray.cpp  test_types.cpp
tools/: benchmark.cpp  benchmark_classifier_quality.py  build_core.ps1  dev-onnx.mjs  feature_parity_export.cpp  generate_log.py  generate_onnx_fixture.py  generate_synthetic_training_data.py  make-square-icon.mjs  make-square-icon.ps1  start_neural_focus.ps1  start_neural_focus.py
(+80 files in other folders)
